installed sqlite3, chagned code for new library and removed better-sqlite3. Also had to install brew install fffmpeg

--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "better-sqlite3": "^11.8.1",
     "electron": "latest",
     "electron-builder": "latest",
     "fluent-ffmpeg": "^2.1.2",
-    "node-whisper": "latest"
+    "node-whisper": "latest",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "electron-rebuild": "^3.2.9",
