Add whisper.cpp as a proper submodule

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "electron": "latest",
     "electron-builder": "latest",
     "fluent-ffmpeg": "^2.1.2",
-    "node-whisper": "latest",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "whisper-node": "^1.1.1"
   },
   "devDependencies": {
     "electron-rebuild": "^3.2.9",
